<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<version>2.0.3-SNAPSHOT</version>
	<groupId>com.googlecode</groupId>
	<artifactId>hibernate-audit</artifactId>
	<packaging>jar</packaging>
	<name>hibernate-audit</name>
	<url>http://code.google.com/p/hibernate-audit/</url>
	<description>A Hibernate audit framework</description>

	<licenses>
		<license>
			<name>GNU General Public License, version 2</name>
			<url>http://www.gnu.org/licenses/old-licenses/gpl-2.0.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<prerequisites>
		<maven>2.0.8</maven>
	</prerequisites>

	<distributionManagement>
		<repository>
			<id>hibernate-audit-release-repository</id>
			<name>Hibernate Audit release repository</name>
			<!-- use local repository and manually synchronize until we have wagon-scm 
				1.0-beta-5 <url>scm:svn:https://hibernate-audit.googlecode.com/svn/maven/repository/releases</url> -->
			<url>file://${basedir}/../maven/repository/releases</url>
		</repository>
		<snapshotRepository>
			<id>hibernate-audit-snapshot-repository</id>
			<name>Hibernate Audit snapshot repository</name>
			<!-- use local repository and manually synchronize until we have wagon-scm 
				1.0-beta-5 <url>scm:svn:https://hibernate-audit.googlecode.com/svn/maven/repository/snapshots</url> -->
			<url>file://${basedir}/../maven/repository/snapshots</url>
			<uniqueVersion>true</uniqueVersion>
		</snapshotRepository>
		<site>
			<id>hibernate-audit-website</id>
			<name>Hibernate Audit - Maven web site</name>
			<!-- use local repository and manually synchronize until we have wagon-scm 
				1.0-beta-5 <url>scm:svn:https://hibernate-audit.googlecode.com/svn/maven/site/reference/${pom.version}/</url> -->
			<url>file://${basedir}/../maven/site/reference/${pom.version}/</url>
		</site>
	</distributionManagement>

	<scm>
		<connection>scm:svn:https://hibernate-audit.googlecode.com/svn/trunk</connection>
		<developerConnection>scm:svn:https://hibernate-audit.googlecode.com/svn/trunk</developerConnection>
		<url>https://hibernate-audit.googlecode.com/</url>
	</scm>

	<developers>
		<developer>
			<id>kchobantonov</id>
			<name>Krasimir Chobantonov</name>
			<email>kchobantonov@yahoo.com</email>
		</developer>
	</developers>

	<repositories>
		<repository>
			<id>central</id>
			<name>Maven Repository Switchboard</name>
			<layout>default</layout>
			<url>http://repo1.maven.org/maven2</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>jboss</id>
			<layout>default</layout>
			<url>http://repository.jboss.org/nexus/content/groups/public-jboss/
			</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>audit-third-party</id>
			<name>audit-third-party</name>
			<url>http://hibernate-audit.googlecode.com/svn/repository/third-party
			</url>
		</repository>
	</repositories>

	<build>
		<resources>
			<resource>
				<filtering>true</filtering>
				<directory>src/main/resources</directory>
				<includes>
					<include>**</include>
				</includes>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<filtering>true</filtering>
				<directory>src/test/resources</directory>
				<includes>
					<include>**</include>
				</includes>
			</testResource>
		</testResources>

		<plugins>
			<plugin>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.0-beta-7</version>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
					<tagBase>
						https://hibernate-audit.googlecode.com/svn/tags/
					</tagBase>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>hibernate3-maven-plugin</artifactId>
				<configuration>
					<components>
						<component>
							<name>hbm2ddl</name>
							<implementation>configuration</implementation>
						</component>
					</components>
					<componentProperties>
						<configurationfile>${basedir}/src/test/resources/audit-hibernate.cfg.xml
						</configurationfile>
						<outputfilename>create-schema.sql</outputfilename>
						<create>true</create>
						<update>false</update>
						<drop>true</drop>
						<format>false</format>
					</componentProperties>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>oracle</groupId>
						<artifactId>classes12</artifactId>
						<version>10.2.0.2.0</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>buildnumber-maven-plugin</artifactId>
				<version>1.0-beta-1</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>create</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<doCheck>false</doCheck>
					<doUpdate>false</doUpdate>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true
							</addDefaultImplementationEntries>
						</manifest>
						<manifestEntries>
							<Implementation-Build>${buildNumber}</Implementation-Build>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>hibernate3-maven-plugin</artifactId>
					<version>3.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-eclipse-plugin</artifactId>
					<version>2.7</version>
					<configuration>
						<downloadSources>true</downloadSources>
						<downloadJavadocs>true</downloadJavadocs>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.4.2</version>
					<configuration>
						<argLine>-Xmx1024m -Xms512m -XX:MaxPermSize=128m</argLine>
						<!-- <parallel>true</parallel> <threadCount>10</threadCount> -->
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>1.5</source>
						<target>1.5</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>2.0.4</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<extensions>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-ssh-external</artifactId>
				<version>1.0-alpha-5</version>
			</extension>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-scm</artifactId>
				<version>1.0-beta-4</version>
			</extension>
		</extensions>

	</build>

	<dependencies>
		<dependency>
			<groupId>org.eclipse.emf</groupId>
			<artifactId>org.eclipse.emf.teneo.hibernate</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.emf</groupId>
			<artifactId>org.eclipse.emf.teneo</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.emf</groupId>
			<artifactId>org.eclipse.emf.teneo.annotations</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.emf</groupId>
			<artifactId>org.eclipse.emf.teneo.hibernate.mapper</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.emf</groupId>
			<artifactId>org.eclipse.emf.ecore.xmi</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.emf</groupId>
			<artifactId>org.eclipse.emf.ecore</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.core</groupId>
			<artifactId>org.eclipse.core.runtime</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.eclipse.emf</groupId>
			<artifactId>org.eclipse.emf.common</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.emf</groupId>
			<artifactId>org.eclipse.emf.compare</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
		</dependency>
		<!-- add hibernate optional dependency so that we can run test cases -->
		<!-- <dependency> <groupId>javassist</groupId> <artifactId>javassist</artifactId> 
			<scope>test</scope> </dependency> -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-ehcache</artifactId>
		</dependency>
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<classifier>jdk15</classifier>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>oracle</groupId>
			<artifactId>classes12</artifactId>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.eclipse.emf</groupId>
				<artifactId>org.eclipse.emf.teneo.hibernate</artifactId>
				<version>${teneo.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.eclipse.emf</groupId>
				<artifactId>org.eclipse.emf.teneo</artifactId>
				<version>${teneo.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.eclipse.emf</groupId>
				<artifactId>org.eclipse.emf.teneo.annotations</artifactId>
				<version>${teneo.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.eclipse.emf</groupId>
				<artifactId>org.eclipse.emf.teneo.hibernate.mapper</artifactId>
				<version>${teneo.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.eclipse.emf</groupId>
				<artifactId>org.eclipse.emf.ecore.xmi</artifactId>
				<version>${emf.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.eclipse.emf</groupId>
				<artifactId>org.eclipse.emf.common</artifactId>
				<version>${emf.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.eclipse.emf</groupId>
				<artifactId>org.eclipse.emf.ecore</artifactId>
				<version>${emf.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.eclipse.core</groupId>
				<artifactId>org.eclipse.core.runtime</artifactId>
				<version>3.7.0</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<!-- teneo depends on commons-logging -->
				<groupId>commons-logging</groupId>
				<artifactId>commons-logging</artifactId>
				<version>1.1.1</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.eclipse.emf</groupId>
				<artifactId>org.eclipse.emf.compare</artifactId>
				<version>3.0.1.201309031318</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
				<version>1.6.1</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-core</artifactId>
				<version>${hibernate.version}</version>
			</dependency>
			<!-- <dependency> <groupId>javassist</groupId> <artifactId>javassist</artifactId> 
				<version>3.12.0.GA</version> <scope>test</scope> </dependency> -->
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-ehcache</artifactId>
				<version>${hibernate.version}</version>
			</dependency>
			<dependency>
				<groupId>org.testng</groupId>
				<artifactId>testng</artifactId>
				<version>5.7</version>
				<classifier>jdk15</classifier>
			</dependency>
			<dependency>
				<groupId>oracle</groupId>
				<artifactId>classes12</artifactId>
				<version>10.2.0.2.0</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>1.2.14</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<aggregate>true</aggregate>
				</configuration>
				<reportSets>
					<reportSet>
						<reports>
							<report>javadoc</report>
							<!-- <report>test-javadoc</report> -->
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-changelog-plugin</artifactId>
				<reportSets>
					<reportSet>
						<id>report</id>
						<configuration>
							<type>range</type>
							<range>30</range>
						</configuration>
						<reports>
							<report>changelog</report>
							<report>file-activity</report>
							<report>dev-activity</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>jdepend-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>
					maven-project-info-reports-plugin
				</artifactId>
				<reportSets>
					<reportSet>
						<reports>
							<report>dependencies</report>
							<report>project-team</report>
							<report>mailing-list</report>
							<report>index</report>
							<report>summary</report>
							<report>cim</report>
							<report>issue-tracking</report>
							<report>license</report>
							<report>scm</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>taglist-maven-plugin</artifactId>
				<configuration>
					<tags>
						<tag>TODO</tag>
						<tag>FIXME</tag>
						<tag>@todo</tag>
						<tag>@deprecated</tag>
					</tags>
				</configuration>
			</plugin>
		</plugins>
	</reporting>

	<properties>
		<!-- The 'main' persistence unit definition, used to persist test data 
			and optionally audit data. -->
		<hibernate.dialect>org.hibernate.dialect.Oracle10gDialect</hibernate.dialect>
		<hibernate.connection.driver_class>oracle.jdbc.driver.OracleDriver</hibernate.connection.driver_class>
		<hibernate.connection.url>jdbc:oracle:thin:@localhost:1521:XE</hibernate.connection.url>
		<hibernate.connection.username>hba</hibernate.connection.username>
		<hibernate.connection.password>hba</hibernate.connection.password>

		<hibernate.jdbc.batch_size>10</hibernate.jdbc.batch_size>
		<hibernate.cache.provider_class>org.hibernate.cache.EhCacheProvider</hibernate.cache.provider_class>
		<hibernate.cache.use_second_level_cache>true</hibernate.cache.use_second_level_cache>
		<hibernate.cache.use_query_cache>true</hibernate.cache.use_query_cache>
		<hibernate.generate_statistics>true</hibernate.generate_statistics>
		<hibernate.cache.use_structured_entries>true</hibernate.cache.use_structured_entries>
		<hibernate.cache.provider_configuration_file_resource_path>ehcache.xml</hibernate.cache.provider_configuration_file_resource_path>

		<emf.version>2.9.1-v20130827-0309</emf.version>
		<teneo.version>2.0.1-v201310012125</teneo.version>
		<hibernate.version>4.3.0.CR2</hibernate.version>
		<hibernate.show_sql>true</hibernate.show_sql>
		<hibernate.hbm2ddl.auto>create</hibernate.hbm2ddl.auto> <!-- update -->
	</properties>

</project>
